--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,3 +9,6 @@ dependencies:
   args: '>=0.9.0 <2.0.0'
   http: '>=0.9.0 <2.0.0'
   path: '>=0.9.0 <2.0.0'
+dev_dependencies:
+  mock: '>=0.11.0 <1.0.0'
+  unittest: '>=0.11.0 <1.0.0'
