--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,20 @@
 name: coverage
-version: 0.7.3
+version: 0.8.0-dev
 author: Dart Team <misc@dartlang.org>
 description: Coverage data manipulation and formatting
 homepage: https://github.com/dart-lang/coverage
 environment:
-  sdk: '>=1.12.0 <2.0.0'
+  sdk: '>=1.16.0 <2.0.0'
 dependencies:
   args: '>=0.12.1 <1.0.0'
   async: ^1.8.0
-  json_rpc_2: ^1.2.0
+  json_rpc_2: ^2.0.1
   logging: '>=0.9.0 <0.12.0'
   path: '>=0.9.0 <2.0.0'
   stack_trace: ^1.3.0
-  vm_service_client: ^0.1.1+1
+  stream_channel: '^1.3.1'
+  vm_service_client: '^0.2.2'
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
 executables:
-  collect_coverage:
-  format_coverage:
+  coverage:
