WIP - logging status to chat

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: dart
 
+after_script:
+- tool/report_failure.sh
+- export
+
 dart:
   # TODO(#308): re-enable testing against stable after 2.10 release.
   # - 2.10.0
