Add sudo to gem install

--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -76,7 +76,7 @@ jobs:
         env:
           COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
       - name: Install coveralls-lcov
-        run: gem install coveralls-lcov	
+        run: sudo gem install coveralls-lcov	
       - name: Upload coverage
         run: coveralls-lcov --repo-token="${COVERALLS_TOKEN}" var/lcov.info
         env:
