--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,9 @@ dev_dependencies:
   test_descriptor: ^1.2.0
 
 dependency_overrides:
-  test: ^1.16.0-nullsafety.4
-  test_core: 0.3.12-nullsafety.5
-  test_api: '>=0.2.19-nullsafety <0.2.19-nullsafety.4'
+  test: 1.16.0-nullsafety.13 
+  test_core: 0.3.12-nullsafety.12
+  test_api: 0.2.19-nullsafety.6 
 
 executables:
   collect_coverage:
