--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,3 +21,6 @@ dev_dependencies:
 executables:
   collect_coverage:
   format_coverage:
+dependency_overrides:
+  vm_service:
+    path: /usr/local/google/home/liama/dart-sdk/sdk/pkg/vm_service
