--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -62,6 +62,25 @@ jobs:
 
   coverage:
     needs: test
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        sdk: [2.15.0, dev]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: dart-lang/setup-dart@v1.0
+        with:
+          sdk: ${{ matrix.sdk }}
+      - id: install
+        name: Install dependencies
+        run: dart pub get
+      - name: Run tests
+        run: dart test
+
+  coverage:
+    needs: coverage
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
