--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -37,31 +37,10 @@ jobs:
         if: always() && steps.install.outcome == 'success'
 
   # Run tests on a matrix consisting of two dimensions:
-  # 1. OS: ubuntu-latest, (macos-latest, windows-latest)
+  # 1. OS: ubuntu-latest, macos-latest, windows-latest
   # 2. release channel: dev
   test:
     needs: analyze
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        # Add macos-latest and/or windows-latest if relevant for this package.
-        os: [ubuntu-latest]
-        sdk: [2.15.0, dev]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: dart-lang/setup-dart@v1.0
-        with:
-          sdk: ${{ matrix.sdk }}
-      - id: install
-        name: Install dependencies
-        run: dart pub get
-      - name: Run VM tests
-        run: dart test --platform vm
-        if: always() && steps.install.outcome == 'success'
-
-  coverage:
-    needs: test
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -76,8 +55,9 @@ jobs:
       - id: install
         name: Install dependencies
         run: dart pub get
-      - name: Run tests
-        run: dart test
+      - name: Run VM tests
+        run: dart test --platform vm
+        if: always() && steps.install.outcome == 'success'
 
   coverage:
     needs: coverage
