Fix workflow again

--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -60,7 +60,7 @@ jobs:
         if: always() && steps.install.outcome == 'success'
 
   coverage:
-    needs: coverage
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
