--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -77,3 +77,26 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: coverage/lcov.info
+
+  benchmark:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v1
+      - name: Run benchmark
+        run: dart run benchmark/run_benchmarks.dart
+      - name: Download previous benchmark data
+        uses: actions/cache@v1
+        with:
+          path: benchmark/data/cache
+          key: ${{ runner.os }}-benchmark
+      - name: Check benchmark result
+        uses: benchmark-action/github-action-benchmark@v1
+        with:
+          tool: 'customSmallerIsBetter'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          output-file-path: benchmark/data/benchmark_result.json
+          external-data-json-path: benchmark/data/cache/benchmark_result.json
+          fail-on-alert: true
+          comment-on-alert: true
