--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -86,6 +86,8 @@ jobs:
       - uses: dart-lang/setup-dart@v1.0
         with:
           sdk: dev
+      - name: Install dependencies
+        run: dart pub get
       - name: Run benchmark
         run: dart run benchmark/run_benchmarks.dart
       - name: Download previous benchmark data
