--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: coverage
-version: 1.6.3-dev
+version: 1.6.3
 description: Coverage data manipulation and formatting
 repository: https://github.com/dart-lang/coverage
 
